[gd_scene load_steps=5 format=3 uid="uid://daxcpqvhi4umu"]

[ext_resource type="Script" path="res://scripts/objects/Blade_Shooter.gd" id="1_8mrtt"]
[ext_resource type="Texture2D" uid="uid://t0awrflt1mhu" path="res://assets/objects/traps/blade_shooter.png" id="2_tnj7p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_glwng"]
size = Vector2(1, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_il2iw"]
size = Vector2(1, 11)

[node name="Blade_Shooter" type="Node2D"]
light_mask = 3
z_index = 3
rotation = 4.71239
script = ExtResource("1_8mrtt")
shot_cooldown = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-9.5399e-08, -8)
texture = ExtResource("2_tnj7p")

[node name="BladeContainer" type="Node" parent="."]

[node name="ShotTimer" type="Timer" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2049

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-15.5, 2.5)
shape = SubResource("RectangleShape2D_glwng")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(15.5, 2.5)
shape = SubResource("RectangleShape2D_il2iw")

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
